<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>gemma</groupId>
        <artifactId>gemma</artifactId>
        <version>1.32.3-SNAPSHOT</version>
    </parent>

    <artifactId>gemma-core-java11</artifactId>

    <name>Gemma Core (Java 11)</name>

    <description>
        This module contains core functionality of Gemma that require Java 11 features.
    </description>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>--add-exports=java.desktop/com.sun.imageio.plugins.png=ALL-UNNAMED</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>gemma</groupId>
            <artifactId>gemma-core</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <!-- this is needed to avoid setting the -release flag -->
        <maven.compiler.release/>
    </properties>

</project>